# Scalable_Genetic_Algorithm

./: .gitignore  CMakeLists.txt  README.md  convergence_json_generator.py  convergence_test_a280.json  convergence_test_berlin52.json  convergence_test_bier127.json  convergence_test_d1291.json  convergence_test_u2319.json  experiment.json  grid_search_island.json  island_scaling.json  leonhard_test.json  main.c  main.cpp  migration_json_generator.py  migration_test_a280.json  migration_test_d1291.json  migration_test_u2319.json  naive_scaling.json  new_scaling_test.json  population_scaling_rest.py  population_sizes.json  population_sizes_large.json  population_test__remaining_u2319.json  population_test_a280.json  population_test_a280_.json  population_test_bier127.json  population_test_d1291.json  population_test_d1291_.json  population_test_generator.py  population_test_u2319.json  population_test_u2319_.json  preprocess.py  preprocess_dataset.ipynb  proper_island.json  quick_scaling_test.json  requirements.txt  ring_experiment.json  run_experiments.py  (+16 more)
cuda/: Makefile  Test.c  official.cu  official.h  run_on_leonhard.sh  tsp_from_scratch.cu  util.c
data/: a280.csv  att48.csv  att532.csv  bays29.csv  bays29.tsp  berlin52.csv  bier127.csv  burma14.csv  burma14.tsp  ch130.csv  d493.csv  preprocess_dataset.ipynb  test.csv  test.tsp  test9.csv
experiments/: convergence_test_a280.json  convergence_test_d1291.json  convergence_test_u2319.json  fc_experiment.json  improved_random.json  migration_json_generator.py  migration_test_a280.json  migration_test_u2319.json  population_test.json  population_test_a280.json  population_test_d1291.json  population_test_generator.py  population_test_u2319.json  random.json  scaling_json_generator.py  scaling_test_a280_scaled.json  scaling_test_a280_sqrt.json  scaling_test_d1291.json  scaling_test_d1291_scaled_extended.json  scaling_test_d1291_sqrt.json
island/: CMakeLists.txt  island.cpp  island.hpp  main.cpp  travelling_salesman_problem.cpp  travelling_salesman_problem.hpp
logging/: .gitignore  README.md  extract_table_data.ipynb  generate_communication_boxplots.ipynb  generate_population_barplots.ipynb  logging.cpp  tags.hpp  (+14 more)
(+20 files in other folders)
